<resources>
    <string name="app_name">e-com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_category">Category</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_account_update">Update Account</string>

    <string name="see_more">See More</string>
    <string name="todo">TODO</string>
    <string name="homes">Homes</string>
    <string name="apartments">Apartments</string>
    <string name="offices">Offices</string>
    <string name="commerces">Commerces</string>
    <string name="apartment">Apartment</string>
    <string name="price_apartment">1.997 USD / Month</string>
    <string name="location_apartment">1234, Agdal, Rabat</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="_14_m">" m²"</string>
    <string name="_3">3</string>
    <string name="surface">Surface</string>

    <!--><-->
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="_20">20</string>
    <string name="dam">" DAM/Month"</string>
    <string name="property_type">Property Type</string>
    <string name="office">Office</string>
    <string name="commerce">Commerce</string>
    <string name="studio">Studio</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4+</string>
    <string name="price_monthly">Price Monthly</string>
    <string name="price">Price :</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="property_size">Property Size</string>
    <string name="size">Size :</string>
    <string name="facilities">Facilities</string>
    <string name="bath_place">Bath Place</string>
    <string name="dinning_room">Dinning Room</string>
    <string name="bedroom_baby">Bedroom Baby</string>
    <string name="balcony">Balcony</string>
    <string name="garage">Garage</string>
    <string name="tv_room">TV Room</string>
    <string name="apply_amp_search"><![CDATA[Apply & Search]]></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_filter">Filter</string>
    <string name="localization">Localization</string>
    <string name="region">Region </string>
    <string name="city">City   </string>
    <string name="menu_post">Post</string>
    <string name="commune">Commune</string>
    <string name="description">Add Description</string>
    <string name="username">Username</string>
    <string name="mail">Mail</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="validate_update">Validate Update</string>
    <string name="email">e-mail</string>
    <string name="menu_update_profile">Update My Profile</string>
    <string name="validate">Validate</string>
    <string name="publish">Publish Now</string>
    <string name="add_image">Add Images</string>
    <string name="add_or_change_image">Change Image(s)</string>
    <string name="selected_image">Selected Images</string>
    <string name="your_localization_here">Your Localization Here</string>
    <string name="find_your_rental_home_here">Find Your Rental Home Here</string>
    <string name="categorie">Categories</string>
    <string name="categories">Categories</string>
    <string name="modern_apart">Modern Apartment</string>
    <string name="rating">Rating : </string>
    <string name="menu_view_apart">Apartment Details</string>
    <string name="menu_modify">Modify Post</string>
    <string name="modify">Modify</string>
    <string name="favoris">Favoris</string>
    <string name="favorite">Favorite</string>
    <string name="delete_images">Delete Images</string>
    <string name="_190000_dh">190000 DH</string>
    <string name="message">  Message  </string>
    <string name="Call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="_18000_dh_month">18000 DH/Month</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">SignOut</string>
    <string name="title_activity_settings">Settings</string>


    <bool name="enable_nearby_search">true</bool>

    <!-- 0.002 USD per each (2.00 USD per 1000) -->
    <bool name="show_confirmation_photo">true</bool>

    <!-- 0.007 USD per each (7.00 USD per 1000) -->
    <bool name="show_confirmation_map">true</bool>

    <!-- If true, the map will automatically center (pan) to
         the selected marker -->
    <bool name="auto_center_on_marker_click">false</bool>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pick_your_location_on_maps">Pick Your Location On Maps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>