<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rmd.ecommerce.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.rmd.ecommerce.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.rmd.ecommerce.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.rmd.ecommerce.ui.account.AccountFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.rmd.ecommerce.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>